 8. When drawing focus, attempt to determine if this is in a KpageListView.
 9. Increase tabbar tab size so as to allow more space around icons.
10. Fix clipping issues when drawing combos with a coloured area under arrow
    (sometimes arrows would not be redrawn).
11. Use standard application font for combos and line-edits that are in toolbars.
12. Use KIcon("dialog-close") as tab-close icon.

1.0.2
-----
 1. Apply cygwin patches from Yaakov S - use MODULE istead of SHARED.
 2. For OpenOffice.org, if menuitem style is set to fade, then use flat.
 3. Respect highlight colour setting when drawing progressbars.
 4. Fix background of KOffice's dock widget titlebars.
 5. Elide progressbar text if there is not enough space.
 6. Replace some dynamic_cast's with qobject_cast's - fixes a reported crash in
    Gambatte (thanks to Andreas Pakulat)
 7. Fix menuitems with Qt4.6 - these were drawn 1 pixel to thin.
 8. Fix plasma calendar's week spinwidet mouse-over under KDE SC4.4
 9. If using a background gradient, or cannot determine a widget's parent's
    background colour - use a 10% alpha white as the etch colour.
10. Fix cropping issues with KIntNumInput in QFormLayout in Qt4.6
11. Remove dock widget title from all KFileWidget's, not just those in KFileDialog.

1.0.1
-----
1. Remove QWidget->int casting that was causing compile failures for some.
2. Fix Qt only compilation due to KColorUtils usage.
3. Fix KTorrent's progressbars appearing as disabled.
4. For OpenOffice.org, dont use faded or bordered menuitems - as there are
   still redraw errors on the first/last item. This is all OO.o's fault, but
   these changes improve the situation a little.
5. Fix kwin compilation with KDE<4.3
6. Apply visual studio patch from Benjamin Sonnemann

1.0.0
-----
 1. Added option to colour selected check/radios.
 2. Added option to use a smaller dot for radios.
 3. Made check/radio and splitter highlight options a configurable % - i.e.
    not based on standard hightlight %