@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>763</width>
-    <height>504</height>
+    <width>755</width>
+    <height>509</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -67,6 +67,15 @@
      </attribute>
      <attribute name="headerDefaultSectionSize">
       <number>10</number>
+     </attribute>
+     <attribute name="headerMinimumSectionSize">
+      <number>10</number>
+     </attribute>
+     <attribute name="headerDefaultSectionSize">
+      <number>10</number>
+     </attribute>
+     <attribute name="headerVisible">
+      <bool>false</bool>
      </attribute>
      <attribute name="headerMinimumSectionSize">
       <number>10</number>
@@ -1480,6 +1489,51 @@
             </property>
             <property name="text">
              <string>Draw as per sidebar button settings</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="11" column="0">
+        <widget class="QLabel" name="label_86">
+         <property name="text">
+          <string>Text:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="11" column="1">
+        <widget class="QFrame" name="frame_8">
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Raised</enum>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout_10a_2">
+          <property name="spacing">
+           <number>0</number>
+          </property>
+          <property name="margin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QRadioButton" name="centerTabText_false">
+            <property name="whatsThis">
+             <string>If enabled, tabs that are within toolbars will be drawn as normal.</string>
+            </property>
+            <property name="text">
+             <string>Left aligned</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="centerTabText">
+            <property name="whatsThis">
+             <string>If enabled, tabs that are within toolbars will be drawn the same as sidebar buttons.</string>
+            </property>
+            <property name="text">
+             <string>Centre aligned</string>
             </property>
            </widget>
           </item>
@@ -3365,6 +3419,8 @@
   <tabstop>invertBotTab</tabstop>
   <tabstop>toolbarTabs</tabstop>
   <tabstop>toolbarTabs_false</tabstop>
+  <tabstop>centerTabText_false</tabstop>
+  <tabstop>centerTabText</tabstop>
   <tabstop>shadeCheckRadio</tabstop>
   <tabstop>customCheckRadioColor</tabstop>
   <tabstop>xCheck_false</tabstop>
