@@ -15,3 +15,4 @@ highlightScrollViews=true
 lvLines=old
 glowProgress=middle
 boldProgress=false
+centerTabText=true
